@@ -1,6 +1,5 @@
 package no.nav.foreldrepenger.web.server.jetty;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Properties;
 
@@ -16,21 +15,20 @@ class DataSourceKonfig {
     private static final Environment ENV = Environment.current();
 
     private static final String MIGRATIONS_LOCATION = "classpath:/db/migration/";
-    private DBConnProp defaultDatasource;
-    private List<DBConnProp> dataSources;
+    private final DBConnProp defaultDS;
+    private final List<DBConnProp> dataSources;
 
     DataSourceKonfig() {
-        defaultDatasource = new DBConnProp(createDatasource("defaultDS"), MIGRATIONS_LOCATION + "defaultDS");
-        dataSources = Arrays.asList(
-                defaultDatasource,
-                new DBConnProp(createDatasource("dvhDS"), MIGRATIONS_LOCATION + "dvhDS"));
+        defaultDS = new DBConnProp(createDatasource("defaultDS"), MIGRATIONS_LOCATION + "defaultDS");
+        dataSources = List.of(defaultDS, new DBConnProp(createDatasource("dvhDS"), MIGRATIONS_LOCATION + "dvhDS"));
     }
 
     private static DataSource createDatasource(String dataSourceName) {
         HikariConfig config = new HikariConfig();
+        var schema = ENV.getRequiredProperty(dataSourceName + ".schema");
         config.setJdbcUrl(ENV.getProperty(dataSourceName + ".url"));
-        config.setUsername(ENV.getProperty(dataSourceName + ".username"));
-        config.setPassword(ENV.getProperty(dataSourceName + ".password")); // NOSONAR false positive
+        config.setUsername(ENV.getProperty(dataSourceName + ".username", schema));
+        config.setPassword(ENV.getProperty(dataSourceName + ".password", schema));
 
         config.setConnectionTimeout(1000);
         config.setMinimumIdle(5);
@@ -45,7 +43,7 @@ class DataSourceKonfig {
     }
 
     DBConnProp getDefaultDatasource() {
-        return defaultDatasource;
+        return defaultDS;
     }
 
     List<DBConnProp> getDataSources() {
@@ -53,8 +51,8 @@ class DataSourceKonfig {
     }
 
     static final class DBConnProp {
-        private DataSource datasource;
-        private String migrationScripts;
+        private final DataSource datasource;
+        private final String migrationScripts;
 
         public DBConnProp(DataSource datasource, String migrationScripts) {
             this.datasource = datasource;
@@ -68,6 +66,15 @@ class DataSourceKonfig {
         public String getMigrationScripts() {
             return migrationScripts;
         }
+
+        @Override
+        public String toString() {
+            return getClass().getSimpleName() + " [datasource=" + datasource + ", migrationScripts=" + migrationScripts + "]";
+        }
     }
 
+    @Override
+    public String toString() {
+        return getClass().getSimpleName() + " [defaultDS=" + defaultDS + ", dataSources=" + dataSources + "]";
+    }
 }
